--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,8 @@ jobs:
       matrix:
         node-version: [18.x]
     steps:
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       - name: "Build"
-      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
@@ -26,7 +25,7 @@ jobs:
           nativefier -p windows metarics.github.io build/
           zip -r windows-release.zip build/
           echo "done!"
-      - uses: "marvinpinto/action-automatic-releases@latest"
+        uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.NANDAN_GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
