--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ jobs:
   pre-release:
     name: "Pre Release"
     runs-on: "ubuntu-latest"
+    permissions:
+      contents: write
     strategy:
       matrix:
         node-version: [18.x]
@@ -28,7 +30,7 @@ jobs:
           zip -r linux-release.zip build/
           echo "done!"
       - name: "release"
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        uses: ncipollo/release-action@v1
         with:
-          files: linux-release.zip
+          token: ${{ secrets.NANDAN_GITHUB_TOKEN }}
+          artifacts: "linux-release.zip"
