--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,11 +30,15 @@ jobs:
           ls build/
           zip -r linux-release.zip build/
           echo "done!"
-      - name: "release"
-        uses: softprops/action-gh-release@v1
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: "pre-release"
-          token: ${{ secrets.NANDAN_GITHUB_TOKEN }}
-          files: |
-            linux-release.zip
-          body: "Binary for linux"
+          release_name: Release ${{ github.ref }}
+          body: |
+            Linux Release
+          draft: false
+          prerelease: false
